--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,5 +23,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+            <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyD_7L4qTI6JuSIFu62zAweuLpe5CKoYoww" />
     </application>
 </manifest>
