--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NiceEvents",
+  "name": "GeoMessenger",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,23 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.3",
+    "axios": "^0.27.2",
+    "firebase": "9.12.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.3",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-maps": "^1.3.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
@@ -29,7 +41,7 @@
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.1.3",
+    "@types/styled-components-react-native": "5.1.1",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
