--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GeoMessenger",
+  "name": "NiceEvents",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -18,7 +17,6 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "axios": "^0.27.2",
-    "firebase": "9.12.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.3",
