--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "axios": "^0.27.2",
+    "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.3",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "^1.3.2",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.18.2",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
