--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
+    "@reduxjs/toolkit": "^1.9.1",
+    "react-redux": "^8.0.5",
     "axios": "^0.27.2",
     "native-base": "^3.4.23",
     "react": "18.1.0",
@@ -61,5 +63,8 @@
       "json",
       "node"
     ]
-  }
+  },
+  "overrides": {
+    "react-devtools-core": "~4.25.0"
+ }
 }
