--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.9.1",
-    "react-redux": "^8.0.5",
     "axios": "^0.27.2",
     "native-base": "^3.4.23",
     "react": "18.1.0",
@@ -30,6 +29,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -66,5 +67,5 @@
   },
   "overrides": {
     "react-devtools-core": "~4.25.0"
- }
+  }
 }
