--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         </intent-filter>
       </activity>
             <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyD_7L4qTI6JuSIFu62zAweuLpe5CKoYoww" />
+              android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyD_7L4qTI6JuSIFu62zAweuLpe5CKoYoww" />
+
+            <meta-data
+              android:name="com.google.firebase.messaging.default_notification_icon"
+              android:resource="@drawable/ic_notification" />
     </application>
 </manifest>
