--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
-    "graphql": "^16.6.0",
     "@hookform/resolvers": "^2.9.10",
     "@react-native-async-storage/async-storage": "1.17.10",
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/messaging": "^16.4.6",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
@@ -21,6 +22,7 @@
     "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
+    "graphql": "^16.6.0",
     "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -42,8 +44,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
     "@types/node": "^18.11.10",
+    "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.4",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
