--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.9.1",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "axios": "^0.27.2",
     "graphql": "^16.6.0",
     "native-base": "^3.4.23",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-code-push": "^7.0.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-maps": "^1.3.2",
